Remove unused CSS files from project. Added User Profile and History
Deleted multiple static CSS files that are no longer in use, including admin-tour-templates.css, all-tour-templates.css, auth.css, footer.css, header.css, profile.css, and styles.css. This cleanup helps reduce clutter and improve maintainability.